[project]
name = "zhangxiaolong-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "duckduckgo-search>=7.3.2",
    "httpx>=0.28.1",
    "python-telegram-bot>=21.10",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.0",
]
