[project]
name = "zhangxiaolong-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "duckduckgo-search>=7.3.2",
    "httpx>=0.28.1",
    "primp>=0.12.0",
    "python-telegram-bot>=21.11",
    "requests>=2.32.3",
    "webvtt-py>=0.5.1",
    "yt-dlp>=2025.1.26",
]

[dependency-groups]
dev = ["black>=25.1.0", "isort>=6.0.0"]
